# axe-hack-city-api

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
axe_hack_city/: main.py  prompt_template.sh
axe_hack_city/config/: settings.py
axe_hack_city/controllers/: building_controller.py  character_controller.py  crafting_controller.py  event_controller.py  faction_controller.py  floor_controller.py  floor_layout_controller.py  inventory_controller.py  item_controller.py  location_controller.py  mission_controller.py  npc_controller.py  progression_controller.py  skill_controller.py  street_controller.py  user_controller.py
axe_hack_city/database/: create_tables.py  session.py  sqlalchemy_repository.py  sqlite_repository.py
axe_hack_city/models/: building_model.py  character_model.py  crafting_model.py  event_model.py  faction_model.py  floor_layout_model.py  floor_model.py  inventory_model.py  item_model.py  location_model.py  mission_model.py  npc_model.py  progression_model.py  skill_model.py  street_model.py  user_model.py
axe_hack_city/routers/: authentication_router.py  building_router.py  character_router.py  crafting_router.py  event_router.py  faction_router.py  floor_layout_router.py  floor_router.py  game_session_router.py  inventory_router.py  item_router.py  location_router.py  mission_router.py  npc_router.py  progression_router.py  skill_router.py  street_router.py  user_router.py
axe_hack_city/schemas/: building_schema.py  character_schema.py  crafting_schema.py  event_schema.py  faction_schema.py  (+11 more)
